# klyph

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-site.yml  macos-build.yml  release.yml
docs/: APPLE_NOTES_BRIDGE.md  CHUTE_ARCHITECTURE.md  FRIEND_BRIEF.md  FRIEND_BRIEF_MAC.md  FRIEND_TESTING.md  KLYPH_ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  UX_IMPROVEMENT_PLAN.md
packaging/apple-notes-bridge-macos/: README.md  install.sh  uninstall.sh
scripts/: beta-check.mjs  build-apple-notes-bridge-package.ps1  build-friend-release.mjs  dev-reset.mjs  query-onboarding.py  reset-onboarding.py
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  window.rs
src/components/: CaptureDestinationPrompt.tsx  CaptureList.tsx  CaptureProductTour.tsx  CaptureWindow.tsx  ChuteAnimatedSphere.tsx  ChuteLogo.tsx  ChuteLogoStatic.tsx  ErrorBoundary.tsx  KlyphAnimatedSphere.tsx  KlyphLogo.tsx  KlyphLogoStatic.tsx  ListPicker.tsx  Onboarding.tsx  ProviderLogo.tsx  SettingsPanel.tsx  TagChip.tsx
src/hooks/: useCaptures.ts
src/lib/: db.ts  intent.test.ts  intent.ts  listContinuation.test.ts  listContinuation.ts  parser.test.ts  parser.ts  platform.ts  recurrence.ts  splitCapture.test.ts  (+2 more)
website/: index.html  logos.js  main.js  package-lock.json  package.json  styles.css  vite.config.js
(+26 files in other folders)
