[package]
name = "chute"
version = "0.2.0"
description = "Chute desktop app"
authors = ["Chute"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
open = "5"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
